chore: last format for today?

--- a/docs/enterprise/index.mdx
+++ b/docs/enterprise/index.mdx
@@ -26,7 +26,7 @@ In the rapidly advancing AI landscape, staying ahead isn't just a competitive ad
 
 Enterprise licenses and partnership opportunities are available exclusively to registered entities and organizations. At this time, we are unable to accommodate individual users. We appreciate your understanding and interest.
 
-To help us respond quickly and efficiently to your inquiry, **please use your official work email address**—**Personal email accounts (e.g. gmail.com, hotmail.com, icloud.com, etc.) are often flagged by our system** and will not be answered.
+To help us respond quickly and efficiently to your inquiry, **please use your official work email address**—**Personal email accounts (e.g., gmail.com, hotmail.com, icloud.com, etc.) are often flagged by our system** and will not be answered.
 
 :::
 
