--- a/docs/features/plugin/index.mdx
+++ b/docs/features/plugin/index.mdx
@@ -17,7 +17,7 @@ Getting started with Tools and Functions is easy because everything’s already 
 
 ## What are "Tools" and "Functions"?
 
-Let's start by thinking of **Open WebUI** as a "base" software that can do many tasks related to using Large Language Models (LLMs). But sometimes, you need extra features or abilities that don't come _out of the box_—this is where **tools** and **functions** come into play.
+Let's start by thinking of **Open WebUI** as a "base" software that can do many tasks related to using Large Language Models (LLMs). But sometimes, you need extra features or abilities that don't come *out of the box*—this is where **tools** and **functions** come into play.
 
 ### Tools
 
