--- a/docs/features/plugin/migration/index.mdx
+++ b/docs/features/plugin/migration/index.mdx
@@ -127,7 +127,7 @@ from open_webui.main import chat_completion
 
 ::tip
 
-**💡 Pro Tip:** Prioritize the unified endpoint (`chat_completion`) for simplicity and future compatibility.
+Prioritize the unified endpoint (`chat_completion`) for simplicity and future compatibility.
 
 :::
 
