--- a/docs/features/plugin/tools/index.mdx
+++ b/docs/features/plugin/tools/index.mdx
@@ -35,7 +35,7 @@ There are two easy ways to install Tools in Open WebUI:
 
 ::warning
 
-🛑 Safety Tip: Never import a Tool you don’t recognize or trust. These are Python scripts and might run unsafe code.
+Safety Tip: Never import a Tool you don’t recognize or trust. These are Python scripts and might run unsafe code.
 
 :::
 
@@ -53,7 +53,7 @@ While chatting, click the ➕ icon in the input area. You’ll see a list of ava
 
 ::tip
 
-💡 Tip: Enabling a Tool gives the model permission to use it — but it may not use it unless it's useful for the task.
+Tip: Enabling a Tool gives the model permission to use it — but it may not use it unless it's useful for the task.
 
 :::
 
