--- a/docs/license.mdx
+++ b/docs/license.mdx
@@ -116,7 +116,7 @@ We remain as open, reasonable, and fair as ever—and we trust the community to 
   - _This means:_ If you contributed anything before v0.6.6, you (and everyone else) retain all the original BSD-3 freedoms: use, modification, redistribution, even sublicensing—**as long as the original BSD-3 license notice remains intact. The BSD-3 license remains in effect for the entire codebase up to and including v0.6.5.**
   - **BSD-3-Clause is one of the most permissive licenses available:** You can use the code for any purpose, even commercially, change it completely, and license your derivative under whatever terms you like, as long as you preserve the BSD-3 notice.
 
-- **The new “fair-use branding” clause only applies to code contributed after v0.6.5 and released as part of v0.6.6 or later,** _and only if you sign the new CLA as part of contributing new material_.
+- **The new “fair-use branding” clause only applies to code contributed after v0.6.5 and released as part of v0.6.6 or later,** *and only if you sign the new CLA as part of contributing new material*.
 
 - **Importantly:** The new license with the branding protection clause is **not being retroactively applied to the entire codebase**. It is only applied to the portion of the code that we (the core team) ourselves wrote (which, with a conservative estimate, is at least 80% of the code up to v0.6.5), and everything going forward starting with v0.6.6.
   - All external/community-contributed code merged before v0.6.6 remains pure BSD-3 and is not covered by the branding clause—**no retroactive relicensing or constraints** will be applied to anyone else’s past contributions.
