--- a/docs/openapi-servers/mcp.mdx
+++ b/docs/openapi-servers/mcp.mdx
@@ -119,7 +119,7 @@ Simply call the auto-generated API endpoints directly via HTTP clients, AI agent
 Assuming you started the above server command (`uvx mcp-server-time`):
 
 - Visit your local API documentation at `http://localhost:8000/docs`.
-- Select a generated endpoint (e.g. `/get_current_time`) and use the provided interactive form.
+- Select a generated endpoint (e.g., `/get_current_time`) and use the provided interactive form.
 - Click "**Execute**" and instantly receive your response.
 
 No setup complexity—just instant REST APIs.
