--- a/docs/pipelines/index.mdx
+++ b/docs/pipelines/index.mdx
@@ -9,7 +9,7 @@ import { TopBanners } from "@site/src/components/TopBanners";
 
 <p align="center">
   <a href="#">
-    <img src="/images/pipelines/header.png" alt="Pipelines Logo" />
+    ![Pipelines Logo](/images/pipelines/header.png)
   </a>
 </p>
 
@@ -45,7 +45,7 @@ Welcome to **Pipelines**, an [Open WebUI](https://github.com/open-webui) initiat
 
 <p align="center">
   <a href="#">
-    <img src="/images/pipelines/workflow.png" alt="Pipelines Workflow" />
+    ![Pipelines Workflow](/images/pipelines/workflow.png)
   </a>
 </p>
 
