--- a/docs/troubleshooting/rag.mdx
+++ b/docs/troubleshooting/rag.mdx
@@ -23,7 +23,7 @@ This is the most common problem—and it's typically caused by issues during you
 
 ::tip
 
-📌 Tip: Try uploading a document and preview the extracted content. If it's blank or missing key sections, you need to adjust your extractor settings or use a different engine.
+Try uploading a document and preview the extracted content. If it's blank or missing key sections, you need to adjust your extractor settings or use a different engine.
 
 :::
 
@@ -31,7 +31,7 @@ This is the most common problem—and it's typically caused by issues during you
 
 ### 2. Only a Small Part of the Document is Being Used 📄➡️✂️
 
-Open WebUI is designed to work with models that have limited context windows by default. For instance, many local models (e.g. Ollama's default models) are limited to 2048 tokens. Because of this, Open WebUI aggressively trims down the retrieved content to fit within the assumed available space.
+Open WebUI is designed to work with models that have limited context windows by default. For instance, many local models (e.g., Ollama's default models) are limited to 2048 tokens. Because of this, Open WebUI aggressively trims down the retrieved content to fit within the assumed available space.
 
 ✅ Solutions:
 
@@ -82,7 +82,7 @@ Even after content extraction and cleaning, web pages easily consume 4,000-8,000
 
 ::tip
 
-📌 Tip: For web search and complex document analysis, stick with models that support 8192+ token contexts in production use cases.
+For web search and complex document analysis, stick with models that support 8192+ token contexts in production use cases.
 
 :::
 
@@ -120,7 +120,7 @@ This error indicates a misconfigured or missing embedding model. When Open WebUI
 
 ::tip
 
-📌 Tip: After fixing the configuration, try re-embedding a document and verify no error is shown in the logs.
+After fixing the configuration, try re-embedding a document and verify no error is shown in the logs.
 
 :::
 
