--- a/docs/tutorials/integrations/onedrive-sharepoint.mdx
+++ b/docs/tutorials/integrations/onedrive-sharepoint.mdx
@@ -110,7 +110,7 @@ To enable support for personal Microsoft accounts, you must create a **second, s
 
 1.  Navigate back to **App registrations** in Microsoft Entra ID and select **+ New registration**.
 2.  Give it a distinct name, like "Open WebUI Personal Integration".
-3.  Under "Supported account types," select the option: **"Accounts in any organizational directory (Any Microsoft Entra ID tenant - Multitenant) and personal Microsoft accounts (e.g. Skype, Xbox)"**.
+3.  Under "Supported account types," select the option: **"Accounts in any organizational directory (Any Microsoft Entra ID tenant - Multitenant) and personal Microsoft accounts (e.g., Skype, Xbox)"**.
 4.  Configure the **SPA Redirect URI** with your Open WebUI base URL, just as you did for the business app.
 5.  **Enable both "Access tokens" and "ID tokens"** under the "Implicit grant and hybrid flows" section.
 6.  For this personal registration, no special API permissions or admin consent are required, as users will consent to `OneDrive.ReadWrite` individually.
