--- a/docs/getting-started/quick-start/starting-with-openai-compatible.mdx
+++ b/docs/getting-started/quick-start/starting-with-openai-compatible.mdx
@@ -58,7 +58,7 @@ See [their docs](https://lemonade-server.ai/) for details.
 
 ::tip
 
-*Tip: If running Open WebUI in Docker and your model server on your host machine, use `http://host.docker.internal:<your-port>/v1`.*
+If running Open WebUI in Docker and your model server on your host machine, use `http://host.docker.internal:<your-port>/v1`.
 
 :::
 
