--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -233,17 +233,17 @@ We are deeply grateful for the generous grant support provided by:
 <div className="grid gap-4 items-start grid-cols-1 md:grid-cols-2">
 
   <a href="https://a16z.com/advancing-open-source-ai-through-benchmarks-and-bold-experimentation/" title="A16z Open Source AI Grant 2025" target="_blank" rel="noopener" className="flex flex-col w-fit gap-2 items-center">
-    <img src="/sponsors/grants/a16z.png" alt="A16z" width={"300px"} style={{verticalAlign:'middle',marginRight:'12px'}} />
+    ![A16z](/sponsors/grants/a16z.png)
     <span style={{verticalAlign:'middle', fontWeight:600, fontSize:'1.05em'}}>A16z Open Source AI Grant 2025</span>
   </a>
 
   <a href="https://builders.mozilla.org/" title="Mozilla Builders 2024" target="_blank" rel="noopener" className="flex flex-col w-fit gap-2 items-center">
-    <img src="/sponsors/grants/mozilla.png" alt="Mozilla" width={"300px"} style={{verticalAlign:'middle',marginRight:'12px'}} />
+    ![Mozilla](/sponsors/grants/mozilla.png)
     <span style={{verticalAlign:'middle', fontWeight:600, fontSize:'1.05em'}}>Mozilla Builders 2024</span>
   </a>
 
   <a href="https://github.com/accelerator" title="GitHub Accelerator 2024" target="_blank" rel="noopener" className="flex flex-col w-fit gap-2 items-center">
-    <img src="/sponsors/grants/github.png" alt="GitHub" width={"300px"} style={{verticalAlign:'middle',marginRight:'16px'}} />
+    ![GitHub](/sponsors/grants/github.png)
     <span style={{verticalAlign:'middle', fontWeight:600, fontSize:'1.05em'}}>GitHub Accelerator 2024</span>
   </a>
 
