chore: more formatting

--- a/docs/getting-started/updating.mdx
+++ b/docs/getting-started/updating.mdx
@@ -142,4 +142,4 @@ For older versions of Docker (pre-Docker v26.1.4):
 - \\\wsl$\docker-desktop-data\data\docker\volumes
 - \\\wsl$\docker-desktop-data\version-pack-data\community\docker\volumes
 
-_(Windows answer credit to StackOverflow user sarye-haddadi; [link to original SO post](https://stackoverflow.com/questions/43181654/locating-data-volumes-in-docker-desktop-windows))_
+*(Windows answer credit to StackOverflow user sarye-haddadi; [link to original SO post](https://stackoverflow.com/questions/43181654/locating-data-volumes-in-docker-desktop-windows))*
