--- a/docs/license.mdx
+++ b/docs/license.mdx
@@ -113,7 +113,7 @@ We remain as open, reasonable, and fair as ever—and we trust the community to 
 **No, and here’s precisely how it works:**
 
 - **All code contributed and merged up to and including v0.6.5 remains under the original BSD-3-Clause license—no new limitations apply.**
-  - _This means:_ If you contributed anything before v0.6.6, you (and everyone else) retain all the original BSD-3 freedoms: use, modification, redistribution, even sublicensing—**as long as the original BSD-3 license notice remains intact. The BSD-3 license remains in effect for the entire codebase up to and including v0.6.5.**
+  - *This means:* If you contributed anything before v0.6.6, you (and everyone else) retain all the original BSD-3 freedoms: use, modification, redistribution, even sublicensing—**as long as the original BSD-3 license notice remains intact. The BSD-3 license remains in effect for the entire codebase up to and including v0.6.5.**
   - **BSD-3-Clause is one of the most permissive licenses available:** You can use the code for any purpose, even commercially, change it completely, and license your derivative under whatever terms you like, as long as you preserve the BSD-3 notice.
 
 - **The new “fair-use branding” clause only applies to code contributed after v0.6.5 and released as part of v0.6.6 or later,** *and only if you sign the new CLA as part of contributing new material*.
@@ -121,7 +121,7 @@ We remain as open, reasonable, and fair as ever—and we trust the community to 
 - **Importantly:** The new license with the branding protection clause is **not being retroactively applied to the entire codebase**. It is only applied to the portion of the code that we (the core team) ourselves wrote (which, with a conservative estimate, is at least 80% of the code up to v0.6.5), and everything going forward starting with v0.6.6.
   - All external/community-contributed code merged before v0.6.6 remains pure BSD-3 and is not covered by the branding clause—**no retroactive relicensing or constraints** will be applied to anyone else’s past contributions.
 
-- Looking at the history of [contributors to Open WebUI](https://github.com/open-webui/open-webui/graphs/contributors), **at least 80% of the codebase (very conservatively) originates directly from our core team**. Even community pull requests that are merged are always _manually reviewed, edited, heavily reworked, and improved_ to meet our standards before being included. Nothing is “blind-merged.”
+- Looking at the history of [contributors to Open WebUI](https://github.com/open-webui/open-webui/graphs/contributors), **at least 80% of the codebase (very conservatively) originates directly from our core team**. Even community pull requests that are merged are always *manually reviewed, edited, heavily reworked, and improved* to meet our standards before being included. Nothing is “blind-merged.”
 
 - **If you contributed code pre-v0.6.6 and now wish to have it removed (i.e., you do not consent to the updated project structure or licensing), we will promptly honor your request and excise it from subsequent releases.** Just contact us and reference the relevant code.
 
@@ -191,7 +191,7 @@ Otherwise, you must retain branding and clearly say your fork isn't the official
 
 :::info
 
-Please note: _This exemption is intended **exclusively for research studies**, not for general-purpose or ongoing institutional use._
+Please note: *This exemption is intended **exclusively for research studies**, not for general-purpose or ongoing institutional use.*
 
 :::
 
@@ -224,7 +224,7 @@ We’re happy to help make Open WebUI accessible for your research—just ask!
 
 If you operate a public fork, or a paid SaaS, and retain the Open WebUI branding:
 
-> _“This project is a customized fork of [Open WebUI](https://github.com/open-webui/open-webui). This release is not affiliated with or maintained by the official Open WebUI team.”_
+> *“This project is a customized fork of [Open WebUI](https://github.com/open-webui/open-webui). This release is not affiliated with or maintained by the official Open WebUI team.”*
 
 Display this message—prominently—in the About section, landing page, or equivalent location. **Transparency is required.**
 
@@ -266,12 +266,12 @@ We want to make it as straightforward as possible for everyone, users, businesse
 
 | Scenario                            | Allowed Without License? | Why NOT Allowed/Details                                              |
 |--------------------------------------|:------------------------:|----------------------------------------------------------------------|
-| Removing **ANY** Open WebUI logo/name from the UI |      ❌        | This is a clear violation, even if you add “Powered by Open WebUI” somewhere else.  |
-| Modifying/changing the Open WebUI logo or color scheme to your branding |  ❌  | The identity must remain clear and intact. No recoloring or swaps.     |
+| Removing **ANY** Open WebUI logo/name from the UI |      ❌        | This is a clear violation, even if you add “Powered by Open WebUI” somewhere else. |
+| Modifying/changing the Open WebUI logo or color scheme to your branding |  ❌  | The identity must remain clear and intact. No recoloring or swaps. |
 | Adding your logo side-by-side/equal in size or priority (**Co-branding**) | ❌         | Co-branding of any kind is strictly forbidden. Your logo must NOT appear next to, be the same size as, or in comparable proximity or prominence to Open WebUI’s logo or name under any circumstances. |
 | Calling your fork “Open WebUI Enterprise” or misleadingly similar | ❌         | Don’t use our project’s name or branding in a way that could confuse users about source or official status. |
 | Major UI modifications that move, minimize, or obscure original Open WebUI branding | ❌ | Moving the logo, shrinking it, hiding it, or pushing it offscreen violates the terms. |
-| White-labelling for your business/SaaS                        | ❌        | You MUST get an enterprise or proprietary license before removing our branding for mass redistribution or resale.  |
+| White-labelling for your business/SaaS                        | ❌        | You MUST get an enterprise or proprietary license before removing our branding for mass redistribution or resale. |
 | “Powered by Open WebUI” credit ONLY (if all native branding is hidden/removed) | ❌ | This is NOT enough and does not meet license terms. |
 
 ### **How to Add Custom Branding Responsibly**
