--- a/docs/troubleshooting/password-reset.mdx
+++ b/docs/troubleshooting/password-reset.mdx
@@ -57,7 +57,7 @@ sqlite3 backend/data/webui.db "UPDATE auth SET password='HASH' WHERE email='admi
 
 #### Alternate Docker Method
 
-_If you have issues with the above._  I had issues chaining the `bash` commands in `alpine/socat`, _since `bash` doesn't exist._
+*If you have issues with the above.*  I had issues chaining the `bash` commands in `alpine/socat`, *since `bash` doesn't exist.*
 
 1. **Run `alpine` linux connected to the open-webui volume.**
 
