--- a/docs/enterprise/index.mdx
+++ b/docs/enterprise/index.mdx
@@ -42,7 +42,7 @@ We **carefully select** our partners to maintain the **highest standards** and p
 
 If you are a **consulting agency**, **AI services provider**, or **reseller**, please **do not** contact our enterprise sales directly. You will **not** get a response from our sales team. Instead, **fill out our partnership interest form**:
 
-🔗 **[Apply Here](https://forms.gle/SemdgxjFXpHmdCby6)**
+🔗 **[Apply for Enterprise Support](https://forms.gle/SemdgxjFXpHmdCby6)**
 
 Please understand:
 
