--- a/docs/features/plugin/functions/action.mdx
+++ b/docs/features/plugin/functions/action.mdx
@@ -60,7 +60,7 @@ Actions can utilize Open WebUI's real-time event system for interactive experien
 
 ### Event Emitter (`__event_emitter__`)
 
-**For more information about Events and Event emitters, [see here](https://docs.openwebui.com/features/plugin/events/).**
+**For more information about Events and Event emitters, see [Events and Event Emitters](https://docs.openwebui.com/features/plugin/events/).**
 
 Send real-time updates to the frontend during action execution:
 
