--- a/docs/features/plugin/tools/index.mdx
+++ b/docs/features/plugin/tools/index.mdx
@@ -19,8 +19,7 @@ Here are just a few examples of what Tools let your AI assistant do:
 - 🖼️ Image Generation: Create images from your prompts.
 - 🔊 Voice Output: Generate AI voices using ElevenLabs.
 
-Explore ready-to-use tools here:
-🧰 [Tools Showcase](https://openwebui.com/tools)
+Explore ready-to-use tools in the 🧰 [Tools Showcase](https://openwebui.com/tools)
 
 ---
 
