--- a/docs/tutorials/tips/special_arguments.mdx
+++ b/docs/tutorials/tips/special_arguments.mdx
@@ -301,7 +301,7 @@ Note that the same files dict can also be accessed via `__metadata__["files"]` (
 
 ### `__request__`
 
-An instance of `fastapi.Request`. You can read more at the [migration page](/docs/features/plugin/migration/index.mdx) or at [fastapi's documentation](https://fastapi.tiangolo.com/reference/request/).
+An instance of `fastapi.Request`. You can read more in the [migration page](/docs/features/plugin/migration/index.mdx) or in [fastapi's documentation](https://fastapi.tiangolo.com/reference/request/).
 
 ### `__task__`
 
