fix: ::tip to :::tip

--- a/docs/features/plugin/tools/index.mdx
+++ b/docs/features/plugin/tools/index.mdx
@@ -50,7 +50,7 @@ You have two ways to enable a Tool for your model:
 
 While chatting, click the ➕ icon in the input area. You’ll see a list of available Tools — you can enable any of them on the fly for that session.
 
-::tip
+:::tip
 
 Tip: Enabling a Tool gives the model permission to use it — but it may not use it unless it's useful for the task.
 
