--- a/docs/features/plugin/migration/index.mdx
+++ b/docs/features/plugin/migration/index.mdx
@@ -125,7 +125,7 @@ from open_webui.routers.openai import generate_chat_completion
 from open_webui.main import chat_completion
 ```
 
-::tip
+:::tip
 
 Prioritize the unified endpoint (`chat_completion`) for simplicity and future compatibility.
 
