--- a/docs/getting-started/quick-start/starting-with-openai-compatible.mdx
+++ b/docs/getting-started/quick-start/starting-with-openai-compatible.mdx
@@ -56,7 +56,7 @@ See [their docs](https://lemonade-server.ai/) for details.
 
 4. Click Save.
 
-::tip
+:::tip
 
 If running Open WebUI in Docker and your model server on your host machine, use `http://host.docker.internal:<your-port>/v1`.
 
