--- a/docs/features/plugin/functions/action.mdx
+++ b/docs/features/plugin/functions/action.mdx
@@ -11,14 +11,14 @@ A scaffold of Action code can be found [in the community section](https://openwe
 
 An example of a graph visualization Action can be seen in the video below.
 
-<p align="center">
+<div align="center">
 	<a href="#">
 		<img
 			src="/images/pipelines/graph-viz-action.gif"
 			alt="Graph Visualization Action"
 		/>
 	</a>
-</p>
+</div>
 
 ## Action Function Architecture
 
