--- a/docs/troubleshooting/rag.mdx
+++ b/docs/troubleshooting/rag.mdx
@@ -21,7 +21,7 @@ This is the most common problem—and it's typically caused by issues during you
   - Docling
   - Custom extractors (depending on your document types)
 
-::tip
+:::tip
 
 Try uploading a document and preview the extracted content. If it's blank or missing key sections, you need to adjust your extractor settings or use a different engine.
 
@@ -80,7 +80,7 @@ Even after content extraction and cleaning, web pages easily consume 4,000-8,000
 - Try GPT-4, GPT-4o, Claude 3, Gemini 1.5, or Mixtral with 8k+ context
 - Compare performance to Ollama—notice the dramatic accuracy difference when more web content can be processed!
 
-::tip
+:::tip
 
 For web search and complex document analysis, stick with models that support 8192+ token contexts in production use cases.
 
@@ -118,7 +118,7 @@ This error indicates a misconfigured or missing embedding model. When Open WebUI
 - Save the embedding model again—even if it's already selected. This forces a recheck/download.
 - If you're using a remote/external embedding tool, make sure it's running and accessible to Open WebUI.
 
-::tip
+:::tip
 
 After fixing the configuration, try re-embedding a document and verify no error is shown in the logs.
 
