--- a/docs/features/plugin/tools/index.mdx
+++ b/docs/features/plugin/tools/index.mdx
@@ -32,7 +32,7 @@ There are two easy ways to install Tools in Open WebUI:
 3. Enter your Open WebUI instance’s IP address or URL.
 4. Click “Import to WebUI” — done!
 
-::warning
+:::warning
 
 Safety Tip: Never import a Tool you don’t recognize or trust. These are Python scripts and might run unsafe code.
 
