--- a/docs/pipelines/index.mdx
+++ b/docs/pipelines/index.mdx
@@ -7,11 +7,11 @@ import { TopBanners } from "@site/src/components/TopBanners";
 
 <TopBanners />
 
-<p align="center">
+<div align="center">
   <a href="#">
     ![Pipelines Logo](/images/pipelines/header.png)
   </a>
-</p>
+</div>
 
 # Pipelines: UI-Agnostic OpenAI API Plugin Framework
 
@@ -43,11 +43,11 @@ Welcome to **Pipelines**, an [Open WebUI](https://github.com/open-webui) initiat
 
 ## 🔧 How It Works
 
-<p align="center">
+<div align="center">
   <a href="#">
     ![Pipelines Workflow](/images/pipelines/workflow.png)
   </a>
-</p>
+</div>
 
 Integrating Pipelines with any OpenAI API-compatible UI client is simple. Launch your Pipelines instance and set the OpenAI URL on your client to the Pipelines URL. That's it! You're ready to leverage any Python library for your needs.
 
