--- a/docs/features/plugin/events/index.mdx
+++ b/docs/features/plugin/events/index.mdx
@@ -87,23 +87,16 @@ Below is a comprehensive table of **all supported `type` values** for events, al
 | -------------------------------------------- | ---------------------------------------------------- | ---------------------------------------------------------------------------------------------------- |
 | `status`                                     | Show a status update/history for a message           | `{description: ..., done: bool, hidden: bool}`                                                       |
 | `chat:completion`                            | Provide a chat completion result                     | (Custom, see Open WebUI internals)                                                                   |
-| `chat:message:delta`,
-`message`          | Append content to the current message                | `{content: "text to append"}`                                                                        |
-| `chat:message`,
-`replace`                | Replace current message content completely           | `{content: "replacement text"}`                                                                      |
-| `chat:message:files`,
-`files`            | Set or overwrite message files (for uploads, output) | `{files: [...]}`                                                                                     |
+| `chat:message:delta`,<br/>`message`          | Append content to the current message                | `{content: "text to append"}`                                                                        |
+| `chat:message`,<br/>`replace`                | Replace current message content completely           | `{content: "replacement text"}`                                                                      |
+| `chat:message:files`,<br/>`files`            | Set or overwrite message files (for uploads, output) | `{files: [...]}`                                                                                     |
 | `chat:title`                                 | Set (or update) the chat conversation title          | Topic string OR `{title: ...}`                                                                       |
 | `chat:tags`                                  | Update the set of tags for a chat                    | Tag array or object                                                                                  |
-| `source`,
-`citation`                     | Add a source/citation, or code execution result      | For code: See [below.](/docs/features/plugin/events/index.mdx#source-or-citation-and-code-execution) |
+| `source`,<br/>`citation`                     | Add a source/citation, or code execution result      | For code: See [below.](/docs/features/plugin/events/index.mdx#source-or-citation-and-code-execution) |
 | `notification`                               | Show a notification ("toast") in the UI              | `{type: "info" or "success" or "error" or "warning", content: "..."}`                                |
-| `confirmation`
-(needs `__event_call__`) | Ask for confirmation (OK/Cancel dialog)              | `{title: "...", message: "..."}`                                                                     |
-| `input`
-(needs `__event_call__`)        | Request simple user input ("input box" dialog)       | `{title: "...", message: "...", placeholder: "...", value: ...}`                                     |
-| `execute`
-(needs `__event_call__`)      | Request user-side code execution and return result   | `{code: "...javascript code..."}`                                                                    |
+| `confirmation` <br/>(needs `__event_call__`) | Ask for confirmation (OK/Cancel dialog)              | `{title: "...", message: "..."}`                                                                     |
+| `input` <br/>(needs `__event_call__`)        | Request simple user input ("input box" dialog)       | `{title: "...", message: "...", placeholder: "...", value: ...}`                                     |
+| `execute` <br/>(needs `__event_call__`)      | Request user-side code execution and return result   | `{code: "...javascript code..."}`                                                                    |                                                                    |
 
 **Other/Advanced types:**
 
